fix dropbar dropdown alignment if boundary-align is true

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -66,7 +66,7 @@
 
 @navbar-dropdown-dropbar-margin-top:            0px;
 @navbar-dropdown-dropbar-margin-bottom:         @navbar-dropdown-dropbar-margin-top;
-@navbar-dropdown-dropbar-padding:               @navbar-nav-item-padding-horizontal;
+@navbar-dropdown-dropbar-padding-horizontal:    @navbar-nav-item-padding-horizontal;
 
 @navbar-dropdown-nav-item-color:                @global-muted-color;
 @navbar-dropdown-nav-item-hover-color:          @global-color;
@@ -394,6 +394,7 @@
  * 1. Set position
  * 2. Bottom padding for dropbar
  * 3. Horizontal padding
+ * 4. Reset padding if aligned to boundary
  */
 
 .uk-navbar-dropdown-dropbar {
@@ -401,8 +402,16 @@
     --uk-position-offset: @navbar-dropdown-dropbar-margin-top;
     /* 2 */
     margin-bottom: @navbar-dropdown-dropbar-margin-bottom;
-    padding: @navbar-dropdown-dropbar-padding;
+    /* 3 */
+    padding-left: @navbar-dropdown-dropbar-padding-horizontal;
+    padding-right: @navbar-dropdown-dropbar-padding-horizontal;
     .hook-navbar-dropdown-dropbar();
+}
+
+/* 4 */
+.uk-navbar-dropdown-dropbar.uk-navbar-dropdown-boundary {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 
